cleaned up based on review comments

--- a/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
+++ b/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
     "\n",
-    "# Getting Started with Merlin Systems \n",
+    "# Merlin Systems: From Models to Serving Recommendations\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -71,7 +71,7 @@
    "source": [
     "## Load Workflow\n",
     "\n",
-    "First, we will load the workflow created in with this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb). "
+    "First, we load the `nvtabular.Workflow` created in with this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb). "
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "746fba56-36af-44a3-8beb-34ca026648be",
    "metadata": {},
    "source": [
-    "After we have loaded the workflow, we need to remove the label columns from it's inputs. This removes all columns with the `TARGET` tag from the workflow. We do this because we need to set the workflow to only  require the features needed to predict, not train, when creating an inference pipeline."
+    "After we have loaded the workflow, we remove the label columns from it's inputs. This removes all columns with the `TARGET` tag from the workflow. We do this because we need to set the workflow to only  require the features needed to predict, not train, when creating an inference pipeline."
    ]
   },
   {
@@ -148,7 +148,7 @@
    "source": [
     "## Load Model\n",
     "\n",
-    "After loading the workflow, we will load the model. This model was trained with the output of the workflow from this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb)."
+    "After loading the workflow, we load the model. This model was trained with the output of the workflow from this [example](https://github.com/NVIDIA-Merlin/models/blob/main/examples/04-Retrieval-Model.ipynb)."
    ]
   },
   {
@@ -187,7 +187,7 @@
    "id": "273cc61f-7231-40db-8e7c-8dd655ee4ebd",
    "metadata": {},
    "source": [
-    "After we have loaded the model, we need to ensure the inputs are correctly mapped. We iterate over the input spec and reset the names of each input tensorspec. This will allow the models inputs to match what the graph expects."
+    "After we have loaded the model, we ensure the inputs are correctly mapped. We iterate over the input spec and reset the names of each input tensorspec. This allows the model's inputs to match what the graph expects."
    ]
   },
   {
@@ -208,11 +208,11 @@
    "source": [
     "## Create the Ensemble Graph\n",
     "\n",
-    "Once we have both the model and the workflow loaded we can start creating the Ensemble Graph. This graph is created by the user, the goal is to illustrate the path of data through your full system. In this example we will only be serving a workflow with a model, but you can add other components that might be necessary to comply with business logic requirements.\n",
+    "Once we have both the model and the workflow loaded we can create the Ensemble Graph. This graph is created by the user, the goal is to illustrate the path of data through your full system. In this example we only serve a workflow with a model, but you can add other components that might be necessary to comply with business logic requirements.\n",
     "\n",
-    "For this example, because we have two components a model and a workflow we will require two operators. These Ensemble operators, also known as Inference Operators, are meant to abstract away all the \"hard parts\" of loading a specific component (i.e. workflow or model) into tritonserver. \n",
+    "For this example, because we have two components a model and a workflow we will require two operators. These operators, also known as Inference Operators, are meant to abstract away all the \"hard parts\" of loading a specific component (i.e. workflow or model) into tritonserver. \n",
     "\n",
-    "In the following code block we will leverage two Inference operators, the TransformWorkflow operator and the PredictTensorflow operator. The TransformWorkflow operator will ensure the workflow is correctly saved and packaged with reqruired config, so that tritonserver will know how to load it. The PredictTensorflow operator will do something similar with the model we loaded before. \n",
+    "In the following code block we will leverage two Inference operators, the TransformWorkflow operator and the PredictTensorflow operator. The TransformWorkflow operator ensures the workflow is correctly saved and packaged with the required config, so tritonserver will know how to load it. The PredictTensorflow operator will do something similar with the model, loaded before. \n",
     "\n",
     "Lets give it a try."
    ]
@@ -237,14 +237,15 @@
    "source": [
     "## Export Graph as Ensemble\n",
     "\n",
-    "The last step is to create the ensemble artifacts that tritonserver can consume. To make these artifacts we need to import the `Ensemble` class. It is responsible with interpreting the graph and exporting the correct files for tritonserver.\n",
+    "The last step is to create the ensemble artifacts that tritonserver can consume. To make these artifacts import the `Ensemble` class. It is responsible with interpreting the graph and exporting the correct files for tritonserver.\n",
     "\n",
-    "To create an `Ensemble` object, the class consume a graph. Now the ensemble object is bonded to the supplied graph. The next step is to export the graph artifacts.\n",
+    "Below you will see that we create a ColumnSchema for the expected inputs to the workflow, which is a Schema. \n",
     "\n",
-    "When you are exporting an ensemble graph you must supply two objects, the path to export the graph and a schema representing the starting input of the graph. In otherwords, the input to the graph is are the inputs to the first operator of your graph. Usually this is a single column, user_id. \n",
+    "When you are creating an `Ensemble` object you supply the graph and a schema representing the starting input of the graph. the inputs to the ensemble graph are the inputs to the first operator of your graph. \n",
     "\n",
-    "Below you will see that we create a ColumnSchema for the expected \"user_id\" input, which is turned into a Schema. \n",
-    "Once we have the graph, the export path and the request schema, we can create the `Ensemble` and export it. \n",
+    "After you have created the `Ensemble` you export the graph, supplying an export path for the `Ensemble.export` function.\n",
+    "\n",
+    "This returns an ensemble config which represents the entire inference pipeline and a list of node-specific configs.\n",
     "\n",
     "Lets take a look below."
    ]
@@ -320,7 +321,7 @@
    "source": [
     "## Verification of Ensemble Artifacts\n",
     "\n",
-    "Once the ensemble export has completed successfully, we can check the export path for the aforementioned graph artifacts. You should see a file structure that represents a ordering number followed by an operator identifier(i.e. 1_transformworkflow, 2_predicttensorflow). \n",
+    "Once the ensemble export has completed successfully, we can check the export path for the graph's artifacts. You should see a file structure that represents a ordering number followed by an operator identifier(i.e. `1_transformworkflow`, `2_predicttensorflow`). \n",
     "\n",
     "Inside each of those folders, there should be a config.pbtxt and a folder with a number, representing a version, usually 1. The artifacts for the given operator are found inside the version folder. These artifacts vary depending on the operator in question. \n",
     "\n",
@@ -361,9 +362,9 @@
    "source": [
     "## Sending a request to Triton\n",
     "\n",
-    "Now that our tritonserver instance is running, we can send a request to it. This request will be composed of values that correspond to the request schema created when exporting the ensemble graph.\n",
+    "Now that our tritonserver instance is running, we can send a request to it. This request is composed of values that correspond to the request schema created when exporting the ensemble graph.\n",
     "\n",
-    "In this case, the request will only have one item, user id. In the code below we will create a request to send to triton and send it. We will then analyze the response, to show the full end to end experience."
+    "In the code below we create a request to send to triton and send it. We will then analyze the response, to show the full experience."
    ]
   },
   {
@@ -371,7 +372,7 @@
    "id": "7ab6a187-d00e-4728-90a5-2f0d4152ec0f",
    "metadata": {},
    "source": [
-    "First we need to ensure that we have a client connected to the tritonserver instance we just launched. To do this we rely on the triton http client."
+    "First we need to ensure that we have a client connected to the tritonserver instance we launched previously. To do this we rely on the triton http client."
    ]
   },
   {
@@ -412,7 +413,7 @@
    "id": "358bb59b-796a-4e1e-8e02-b7d3b86c27f9",
    "metadata": {},
    "source": [
-    "Once we have created the client and verified it is connected to the tritonserver instance, we can communicate with the server and ensure all the models have been loaded correctly using the following commands."
+    "Once we have created the client and verified it is connected to the tritonserver instance, we can communicate with the server and ensure all the models have been loaded correctly."
    ]
   },
   {
@@ -457,7 +458,7 @@
    "id": "dfbc6f01-5ccf-43a2-ae4f-8451a420fc70",
    "metadata": {},
    "source": [
-    "After verify the models are correctly loaded by triton we can grab some original test data and send it as an inference request to triton. Note: `df_lib` will be cudf if a GPU is available and pandas otherwise."
+    "After verifying the models are correctly loaded by triton we grab some original test data and send it as an inference request to triton. Note: `df_lib` is cudf if a GPU is available and pandas otherwise."
    ]
   },
   {
@@ -609,7 +610,7 @@
    "id": "9691d28f-80d8-4520-b6e6-b7e260c50380",
    "metadata": {},
    "source": [
-    "Once we have isolated our \"batch\" we must convert the dataframe representation into triton inputs. We also have to declare the outputs we expect to receive from the model."
+    "Once we isolate our `batch`, we convert the dataframe representation into triton inputs. We also declare the outputs we expect to receive from the model."
    ]
   },
   {
@@ -635,7 +636,7 @@
    "id": "50fb442d-d918-4b1a-a825-dfce4f75bc02",
    "metadata": {},
    "source": [
-    "Once our `inputs` and `outputs` have been created we can use the `triton_client` we created earlier to send the inference request."
+    "Once our `inputs` and `outputs` are created, we can use the `triton_client` created earlier to send the inference request."
    ]
   },
   {
@@ -655,7 +656,7 @@
    "id": "10c00a98-a30e-45ca-9ab6-667621a20c75",
    "metadata": {},
    "source": [
-    "When Triton completes the inference request, it returns a Triton inference response. This response must then be parsed to get the desired predictions."
+    "When Triton completes the inference request, it returns a Triton inference response. This response is parsed to get the desired predictions."
    ]
   },
   {
