remove re-mapping of tf tensorspec

--- a/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
+++ b/examples/Getting_Started/Getting-started-with-Merlin-Systems.ipynb
@@ -184,25 +184,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "273cc61f-7231-40db-8e7c-8dd655ee4ebd",
-   "metadata": {},
-   "source": [
-    "After we have loaded the model, we ensure the inputs are correctly mapped. We iterate over the input spec and reset the names of each input tensorspec. This allows the model's inputs to match what the graph expects."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "fadee1ce-e8ed-46c5-a3bf-7d13f63f032c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key, spec in model._saved_model_inputs_spec.items():\n",
-    "    model._saved_model_inputs_spec[key] = tf.TensorSpec(shape=spec.shape, dtype=spec.dtype, name=key)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "53908458",
    "metadata": {},
    "source": [
@@ -227,7 +208,7 @@
     "from merlin.systems.dag.ops.workflow import TransformWorkflow\n",
     "from merlin.systems.dag.ops.tensorflow import PredictTensorflow\n",
     "\n",
-    "triton_chain = workflow.input_schema.column_names >> TransformWorkflow(workflow) >> PredictTensorflow(model)\n"
+    "serving_operators = workflow.input_schema.column_names >> TransformWorkflow(workflow) >> PredictTensorflow(model)\n"
    ]
   },
   {
@@ -307,7 +288,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "ensemble = Ensemble(triton_chain, workflow.input_schema)\n",
+    "ensemble = Ensemble(serving_operators, workflow.input_schema)\n",
     "\n",
     "export_path = os.path.join(input_path, \"ensemble\")\n",
     "\n",
